--- a/AD_TPO_WEB/WebContent/css/styles.css
+++ b/AD_TPO_WEB/WebContent/css/styles.css
@@ -161,5 +161,83 @@ h1 {
 	text-align: center;
 }
 
+.verticalIzquierdo{
+	width: 250px;
+	height: 500px;
+	position: fixed;
+	left: 125px;
+	top: 100px;
+	
+}
 
+.verticalCentro{
+	width: 250px;
+	height: 500px;
+	position: fixed;
+	left: 610px;
+	top: 100px;
+	
+}
+
+.verticalDerecho{
+	width: 250px;
+	height: 500px;
+	position: fixed;
+	left: 1100px;
+	top: 100px;
+	
+}
+
+.abajoCentro{
+	width: 250px;
+	height: 500px;
+	position: fixed;
+	left: 125px;
+	top: 500px;
+	
+}
+
+.abajoCentro .boton{
+  font-family: "Roboto", sans-serif;
+  text-transform: uppercase;
+  outline: 0;
+  background: #ee0b0d;
+  width: 100%;
+  border: 0;
+  padding: 15px;
+  color: #FFFFFF;
+  font-size: 14px;
+  -webkit-transition: all 0.3 ease;
+  transition: all 0.3 ease;
+  cursor: pointer;
+}
+
+.textoBoton{
+	font-family: "Roboto", sans-serif;
+  text-transform: uppercase;
+  text-shadow:black;
+  width: 100%;
+  text-align:justify;
+  border: 0;
+  padding: 10px;
+  color: #FFFFFF;
+  font-size: 16px;
+  font-style: italic;
+  cursor: pointer;
+}
+
+.boton {
+  font-family: "Roboto", sans-serif;
+  text-transform: uppercase;
+  outline: 0;
+  background: #4CAF50;
+  width: 100%;
+  border: 0;
+  padding: 15px;
+  color: #FFFFFF;
+  font-size: 14px;
+  -webkit-transition: all 0.3 ease;
+  transition: all 0.3 ease;
+  cursor: pointer;
+}
 
