--- a/AD_TPO_WEB/WebContent/css/styles.css
+++ b/AD_TPO_WEB/WebContent/css/styles.css
@@ -188,6 +188,27 @@ h1 {
 	
 }
 
+.verRanking{
+	width: 250px;
+	height: 50px;
+	position: absolute;
+	left: 480px;
+	top: 0px;
+	text-transform: uppercase;
+	outline: 0;
+	background: #4CAF50;
+	border: 0;
+	padding: 15px;
+	color: #FFFFFF;
+	font-size: 14px;
+	-webkit-transition: all 0.3 ease;
+	transition: all 0.3 ease;
+	text-align: center;
+	
+	
+	
+}
+
 .abajoCentro{
 	width: 250px;
 	height: 500px;
