--- a/AD_TPO_WEB/WebContent/css/styles.css
+++ b/AD_TPO_WEB/WebContent/css/styles.css
@@ -78,6 +78,8 @@
 .form .register-form {
   display: none;
 }
+
+
 .container {
   position: relative;
   z-index: 1;
@@ -127,6 +129,21 @@ body {
 	
 	
 	background-image: "images/MesaDeJuego.jpg"
+}
+
+.form .botonAgregarMiembro {
+  font-family: "Roboto", sans-serif;
+  text-transform: uppercase;
+  outline: 0;
+  background: #4CAF50;
+  width: 100%;
+  border: 0;
+  padding: 15px;
+  color: #FFFFFF;
+  font-size: 14px;
+  -webkit-transition: all 0.3 ease;
+  transition: all 0.3 ease;
+  cursor: pointer;
 }
 
 
@@ -304,6 +321,21 @@ h1 {
 	color: #369;
 	text-decoration: underline;
 }
+
+.TituloGrupo {
+	position: absolute;
+	top: 65px;
+	left: 110px;
+	font-family: Tahoma, Geneva, sans-serif;
+	font-size: 16px;
+	font-style: normal;
+	font-weight: bold;
+	font-variant: normal;
+	text-transform: uppercase;
+	color: #369;
+	text-decoration: underline;
+}
+
 .PartidosFinalizados {
 	position: absolute;
 	top: 65px;
@@ -314,6 +346,64 @@ h1 {
 	font-weight: bold;
 	font-variant: normal;
 	color: #93C;
+	text-decoration: underline;
+}
+
+.TituloMiembros {
+	position: absolute;
+	top: 65px;
+	left: 500px;
+	font-family: Tahoma, Geneva, sans-serif;
+	font-size: 16px;
+	font-style: normal;
+	font-weight: bold;
+	font-variant: normal;
+	color: #93C;
+	text-decoration: underline;
+}
+
+.TablaMiembros {
+	position: absolute;
+	top: 100px;
+	left: 350px;
+	font-family: cursive;
+	font-size: 12px;
+	font-style: normal;
+	font-weight: bold;
+	text-transform: uppercase;
+	text-align: center;
+	color: white;
+	width: 472px;
+}
+
+
+.TablaGrupo {
+	
+	position: absolute;
+	top: 100px;
+	left: 50px;
+	font-family: cursive;
+	font-size: 12px;
+	font-style: normal;
+	font-weight: bold;
+	text-transform: uppercase;
+	text-align: center;
+	color: white;
+	text-decoration: underline;
+}
+
+.agregarMiembro {
+	
+	position: absolute;
+	top: 400px;
+	left: 50px;
+	font-family: cursive;
+	font-size: 12px;
+	font-style: normal;
+	font-weight: bold;
+	text-transform: uppercase;
+	text-align: center;
+	color: white;
 	text-decoration: underline;
 }
 
