--- a/AD_TPO_WEB/WebContent/css/styles.css
+++ b/AD_TPO_WEB/WebContent/css/styles.css
@@ -252,6 +252,21 @@ h1 {
   cursor: pointer;
 }
 
+.verticalDerecho .boton{
+  font-family: "Roboto", sans-serif;
+  text-transform: uppercase;
+  outline: 0;
+  background: #4CAF50;
+  width: 100%;
+  border: 0;
+  padding: 15px;
+  color: #FFFFFF;
+  font-size: 14px;
+  -webkit-transition: all 0.3 ease;
+  transition: all 0.3 ease;
+  cursor: pointer;
+}
+
 .textoBoton{
 	font-family: "Roboto", sans-serif;
   text-transform: uppercase;
@@ -468,4 +483,12 @@ h1 {
   position : fixed;
   left: 125px;
   top: 500px;
+}
+
+.selector-grupo{
+	height: 30px;
+  	line-height: 30px;
+  	width: 300px;
+  	position : relative;
+  	background-color : #2cdfe4;
 }
