Se cambian nombres de .jsp y servlets para hacerlo mas claro. Estaba muy enquilombado ese tema en las pantallas de partida cerrada.

--- a/AD_TPO_WEB/WebContent/css/styles.css
+++ b/AD_TPO_WEB/WebContent/css/styles.css
@@ -490,5 +490,5 @@ h1 {
   	line-height: 30px;
   	width: 300px;
   	position : relative;
-  	background-color : #2cdfe4;
+  	background-color : #2feaee;
 }
