Completado seleccion de grupo y jugadores con validaciones. Falta servlet de crear el partido cerrado y la busqueda.

--- a/AD_TPO_WEB/WebContent/css/styles.css
+++ b/AD_TPO_WEB/WebContent/css/styles.css
@@ -485,10 +485,11 @@ h1 {
   top: 500px;
 }
 
-.selector-grupo{
+.selector-grupo-jugador{
 	height: 30px;
   	line-height: 30px;
   	width: 300px;
   	position : relative;
-  	background-color : #2feaee;
+  	background-color : #0ef7cb;
+  	margin-bottom: 15px;
 }
